[project]
name = "token-scope"
version = "0.1.0"
description = "A PyTorch Lightning-based training framework for output length prediction models"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Mingyi Jin", email = "jinmingyi1998@sina.com"}
]
maintainers = [
    {name = "Mingyi Jin", email = "jinmingyi1998@sina.com"}
]
keywords = ["machine-learning", "pytorch", "nlp", "pytorch-lightning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "torch",
    "pytorch-lightning",
    "transformers",
    "typer",
    "tensorboard",
    "scikit-learn",
    "numpy",
    "pathlib-mate",
]

[project.urls]
Homepage = "https://github.com/jinmingyi1998/token_scope"
Repository = "https://github.com/jinmingyi1998/token_scope"

[tool.setuptools.packages.find]
where = ["."]
include = ["olp*"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
src_paths = ["olp", "train.py"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "pytorch_lightning.*",
    "transformers.*",
    "sklearn.*",
    "tensorboard.*",
]
ignore_missing_imports = true
